### CHANGE log for package oligoClasses ###

Changes made by Matt Settles 12-4-2008

** All changes should generally have effect on only Affy Tiling, ST and expression arrays.
added classes AffyExonPDInfo and AffySTPDInfo

03-09-09 - Benilton Carvalho - committed version 1.5.6

** Small changes to reduce duplication of code for Gene and Exon Affymetrix arrays.

03-11-09 - Benilton Carvalho - committed version 1.5.7

** Added accessors for Affy Tiling arrays.

03-17-09 - Benilton Carvalho - committed version 1.5.11

** Generalized bg/bgindex methods for FeatureSet objects.

03-18-09 - Benilton Carvalho - committed version 1.5.12

** Fixed all warnings so it passes CHECK.

03-20-09 - R. Scharpf - committed version 1.5.14
** Removed requirement that chromosome be stored as a character string in oligoSnpSet featureData slot
** Removed calculateCopyNumber.Rd file

03-23-09 - R. Scharpf - committed version 1.5.15
** Removed requirement that chromosome be stored as a character string in SnpCallSet and SnpCopyNumberSet

03-24-09 - B Carvalho - committed version 1.5.16

** Removed unused TilingQSet-class

** Redefined sampleNames method for FeatureSet-like objects so it returns a vector. Because I changed FeatureSet (it now contains "NChannelSet" instead of "eSet"), sampleNames() would return a list (on "NChannelSet", elements of assayData are allowed to have different colnames). For the applications I foresee oligo being used, this (different colnames) should not be the case...

** Changed definition of FeatureSet. Instead of 'eSet', it contains "NChannelSet".

** Added TilingFeatureSet2 class, with two channels, to accommodate 2-colors applications of Tiling arrays.