@@ -36,6 +36,7 @@ setGeneric("bgindex", function(object, ...) standardGeneric("bgindex"))
 setGeneric("pmindex", function(object, ...) standardGeneric("pmindex"))
 setGeneric("mmindex", function(object, ...) standardGeneric("mmindex"))
 setGeneric("kind", function(object) standardGeneric("kind"))
+setGeneric("bgSequence", function(object, ...) standardGeneric("bgSequence"))
 setGeneric("pmSequence", function(object, ...) standardGeneric("pmSequence"))
 setGeneric("mmSequence", function(object) standardGeneric("mmSequence"))
 setGeneric("pmOffset", function(object) standardGeneric("pmOffset"))
